Seems to work, but only shows 1 page

--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^5.12.4",
+    "@react-pdf/renderer": "^3.1.14",
+    "gatsby": "^5.12.9",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^3.12.0",
     "gatsby-plugin-manifest": "^5.12.0",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^6.12.0",
     "gatsby-plugin-sharp": "^5.12.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^5.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-fonts": "^1.2.1",
     "react-helmet": "^6.1.0",
     "react-pdf": "^7.5.1"
   },
   "devDependencies": {
+    "node-loader": "^2.0.0",
     "prettier": "^2.8.8"
   },
   "keywords": [
