--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^5.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
+    "github-markdown-css": "^5.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-fonts": "^1.2.1",
     "react-helmet": "^6.1.0",
-    "react-pdf": "^7.5.1"
+    "react-markdown": "^9.0.0",
+    "react-pdf": "^7.5.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "node-loader": "^2.0.0",
