--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@react-pdf/renderer": "^3.1.14",
     "gatsby": "^5.12.9",
     "gatsby-plugin-clearbit": "^1.1.0",
+    "gatsby-plugin-facebook-pixel": "^1.0.8",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-gtag": "^5.12.3",
     "gatsby-plugin-hotjar": "^1.1.1",
