--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-source-filesystem": "^5.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
     "github-markdown-css": "^5.4.0",
+    "marked": "^9.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-fonts": "^1.2.1",
