--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "gatsby-transformer-sharp": "^5.12.0",
     "github-markdown-css": "^5.4.0",
     "marked": "^9.1.5",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-fonts": "^1.2.1",
     "react-helmet": "^6.1.0",
     "react-markdown": "^9.0.0",
     "react-pdf": "^7.5.1",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "node-loader": "^2.0.0",
