--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-transformer-sharp": "^5.12.0",
     "github-markdown-css": "^5.4.0",
     "marked": "^9.1.5",
+    "pdfjs-dist": "^4.0.189",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
