--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-google-fonts": "^1.2.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.11.0",
     "react-markdown": "^9.0.0",
     "react-pdf": "^7.5.1",
     "react-syntax-highlighter": "^15.5.0",
