--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mdx-js/mdx": "^3.0.0",
+    "@mdx-js/react": "^2.3.0",
     "@react-pdf/renderer": "^3.1.14",
     "dompurify": "^3.0.6",
     "gatsby": "^5.12.9",
@@ -15,10 +17,12 @@
     "gatsby-plugin-hotjar": "^1.1.1",
     "gatsby-plugin-image": "^3.12.0",
     "gatsby-plugin-manifest": "^5.12.0",
+    "gatsby-plugin-mdx": "^5.12.3",
     "gatsby-plugin-react-helmet": "^6.12.0",
     "gatsby-plugin-sharp": "^5.12.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^5.12.0",
+    "gatsby-remark-images": "^7.12.3",
+    "gatsby-source-filesystem": "^5.12.1",
     "gatsby-transformer-sharp": "^5.12.0",
     "github-markdown-css": "^5.4.0",
     "marked": "^9.1.5",
