--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-pdf/renderer": "^3.1.14",
     "dompurify": "^3.0.6",
     "gatsby": "^5.12.9",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-clearbit": "^1.1.0",
     "gatsby-plugin-facebook-pixel": "^1.0.8",
     "gatsby-plugin-google-fonts": "^1.0.1",
