--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-transformer-remark": "^6.12.3",
     "gatsby-transformer-sharp": "^5.12.0",
     "github-markdown-css": "^5.4.0",
+    "lodash": "^4.17.21",
     "marked": "^9.1.5",
     "pdfjs-dist": "^4.0.189",
     "query-string": "^8.1.0",
