--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,10 @@
 {
-  "arrowParens": "avoid",
   "semi": false,
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "printWidth": 80,
+  "singleQuote": false,
+  "jsxSingleQuote": false,
+  "jsxBracketSameLine": false,
+  "arrowParens": "avoid"
 }
