--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@mdx-js/mdx": "^3.0.0",
     "@mdx-js/react": "^2.3.0",
     "@react-pdf/renderer": "^3.1.14",
+    "axios": "^1.6.2",
     "dompurify": "^3.0.6",
+    "fs-extra": "^11.1.1",
     "gatsby": "^5.12.9",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-clearbit": "^1.1.0",
